--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/logomr.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="tile designing website"
-    />
+    <meta name="title" content="MR Tile Designing - Tile Works & Interior Solutions" />
+<meta name="description" content="MR Tile Designing offers professional tile fixing, flooring, wall tiles and interior design services with modern styles and best quality." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logomr.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
